--- a/curriculum/week-02/1.1-pandas-intro/w2d1-pandas-intro-one.ipynb
+++ b/curriculum/week-02/1.1-pandas-intro/w2d1-pandas-intro-one.ipynb
@@ -4804,9 +4804,10 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
