--- a/curriculum/week-03/2.3-regularization/w3d2-regularization.ipynb
+++ b/curriculum/week-03/2.3-regularization/w3d2-regularization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "hideCode": false,
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -446,13 +446,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "penalty = lambda * magnitude of coefficients"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -473,7 +466,7 @@
     }
    },
    "source": [
-    "## Lasso (L1) vs. Ridge (L2) Regressions"
+    "## Lasso (L1) vs. Ridge (R2) Regressions"
    ]
   },
   {
@@ -1308,10 +1301,9 @@
   }
  ],
  "metadata": {
-  "anaconda-cloud": {},
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
