--- a/curriculum/week-02/2.1-pandas-intro-2/w2d2-pandas-intro-two-lecture.ipynb
+++ b/curriculum/week-02/2.1-pandas-intro-2/w2d2-pandas-intro-two-lecture.ipynb
@@ -7055,10 +7055,9 @@
   }
  ],
  "metadata": {
-  "anaconda-cloud": {},
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
