--- a/curriculum/week-02/5.1-stats-scipy/w2d5-stats-scipy-lecture.ipynb
+++ b/curriculum/week-02/5.1-stats-scipy/w2d5-stats-scipy-lecture.ipynb
@@ -514,10 +514,9 @@
   }
  ],
  "metadata": {
-  "anaconda-cloud": {},
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
