--- a/curriculum/week-03/2.4-lab-regularization/code/starter-code/Regularization-Lab-Starter.ipynb
+++ b/curriculum/week-03/2.4-lab-regularization/code/starter-code/Regularization-Lab-Starter.ipynb
@@ -387,9 +387,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python [py2]",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "Python [py2]"
   },
   "language_info": {
    "codemirror_mode": {
