--- a/curriculum/week-03/3.2-regression-metrics-loss-functions/w3d3-regression-metrics-and-loss-functions-lecture.ipynb
+++ b/curriculum/week-03/3.2-regression-metrics-loss-functions/w3d3-regression-metrics-and-loss-functions-lecture.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -639,10 +639,9 @@
   }
  ],
  "metadata": {
-  "anaconda-cloud": {},
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
