--- a/curriculum/week-03/2.4-lab-regularization/code/starter-code/Regularization-Lab-Starter.ipynb
+++ b/curriculum/week-03/2.4-lab-regularization/code/starter-code/Regularization-Lab-Starter.ipynb
@@ -387,9 +387,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [py2]",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "Python [py2]"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -401,7 +401,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
