--- a/curriculum/week-03/1.3-linear-regression-scikit-statsmodels/code/starter-code/w3d1-linear-regression-lecture.ipynb
+++ b/curriculum/week-03/1.3-linear-regression-scikit-statsmodels/code/starter-code/w3d1-linear-regression-lecture.ipynb
@@ -2642,10 +2642,9 @@
   }
  ],
  "metadata": {
-  "anaconda-cloud": {},
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
