--- a/curriculum/week-03/5.2-gradient-descent/w3-5.2-gradient-descent-lecture.ipynb
+++ b/curriculum/week-03/5.2-gradient-descent/w3-5.2-gradient-descent-lecture.ipynb
@@ -781,12 +781,11 @@
   }
  ],
  "metadata": {
-  "anaconda-cloud": {},
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
