--- a/curriculum/week-03/4.2-cross-val/w3d4-cross-val-lecture.ipynb
+++ b/curriculum/week-03/4.2-cross-val/w3d4-cross-val-lecture.ipynb
@@ -2883,9 +2883,10 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
