--- a/curriculum/week-04/1.1-classification-knn-intro/w4d1_knn_model_building_starter.ipynb
+++ b/curriculum/week-04/1.1-classification-knn-intro/w4d1_knn_model_building_starter.ipynb
@@ -26,7 +26,8 @@
     "def neighbor_vote(labels):\n",
     "    \"\"\" Get the majority label from k neighbors.\"\"\"\n",
     "    # Is it possible to have a tie? How would you handle that?\n",
-    "    if \n",
+    "    vote = labels.value_counts().idmax()\n",
+    "    # if tie happens, take first index\n",
     "    return vote"
    ]
   },
@@ -39,7 +40,9 @@
    "outputs": [],
    "source": [
     "def knn_classifier(labeled_points, new_point, k):\n",
-    "    \"\"\" Given classified points and one new point, return a prediction based on the votes of k neighbors.\"\"\"\n",
+    "    \"\"\" Given classified points and one new point, \n",
+    "    return a prediction based on the votes of k neighbors.\"\"\"\n",
+    "    \n",
     "    return prediction"
    ]
   },
