--- a/curriculum/week-04/1.1-classification-knn-intro/w4d1_knn_model_building_starter.ipynb
+++ b/curriculum/week-04/1.1-classification-knn-intro/w4d1_knn_model_building_starter.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -33,15 +33,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def knn_classifier(labeled_points, new_point, k):\n",
+    "def knn_classifier(labeled_points, label, new_point, k):\n",
     "    \"\"\" Given classified points and one new point, \n",
     "    return a prediction based on the votes of k neighbors.\"\"\"\n",
+    "    ilist = []\n",
+    "    \n",
+    "    for i in labeled_points:\n",
+    "        dist = calculate_distance(new_point,i)\n",
+    "        ilist.append(dist)\n",
+    "    \n",
+    "    ilist = pd.concat([ilist, label])\n",
+    "    \n",
+    "    ilist= pd.Series(ilist).sort_values(inplace = True)\n",
+    "    e_ilist = ilist.head(k)\n",
+    "    prediction = neighbor_vote(e_ilist)\n",
     "    \n",
     "    return prediction"
    ]
@@ -144,45 +155,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "' Iteratively classify new points in test_df, based on the labeled points in training_df, and track your accuracy.'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "\"\"\" Iteratively classify new points in test_df, based on the labeled points in training_df, and track your accuracy.\"\"\""
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "' BONUS: plot the labeled points and an example of a new point being classified.'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "\"\"\" BONUS: plot the labeled points and an example of a new point being classified.\"\"\""
    ]
