--- a/curriculum/week-04/1.1-classification-knn-intro/w4d1_knn_model_building_solution.ipynb
+++ b/curriculum/week-04/1.1-classification-knn-intro/w4d1_knn_model_building_solution.ipynb
@@ -176,7 +176,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
