--- a/curriculum/week-04/1.1-classification-knn-intro/w4d1_knn_model_building_starter.ipynb
+++ b/curriculum/week-04/1.1-classification-knn-intro/w4d1_knn_model_building_starter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -10,14 +10,12 @@
    "source": [
     "def calculate_distance(p, q):\n",
     "    \"\"\" Calculate Euclidean distance between two points.\"\"\"\n",
-    "     # p and q are tuples of (x,y)\n",
-    "    distance = np.sqrt((p[0]-p[1])**2 + (q[0]-q[1])**2)\n",
     "    return distance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -26,34 +24,19 @@
     "def neighbor_vote(labels):\n",
     "    \"\"\" Get the majority label from k neighbors.\"\"\"\n",
     "    # Is it possible to have a tie? How would you handle that?\n",
-    "    vote = labels.value_counts().idmax()\n",
-    "    # if tie happens, take first index\n",
     "    return vote"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def knn_classifier(labeled_points, label, new_point, k):\n",
-    "    \"\"\" Given classified points and one new point, \n",
-    "    return a prediction based on the votes of k neighbors.\"\"\"\n",
-    "    ilist = []\n",
-    "    \n",
-    "    for i in labeled_points:\n",
-    "        dist = calculate_distance(new_point,i)\n",
-    "        ilist.append(dist)\n",
-    "    \n",
-    "    ilist = pd.concat([ilist, label])\n",
-    "    \n",
-    "    ilist= pd.Series(ilist).sort_values(inplace = True)\n",
-    "    e_ilist = ilist.head(k)\n",
-    "    prediction = neighbor_vote(e_ilist)\n",
-    "    \n",
+    "def knn_classifier(labeled_points, new_point, k):\n",
+    "    \"\"\" Given classified points and one new point, return a prediction based on the votes of k neighbors.\"\"\"\n",
     "    return prediction"
    ]
   },
@@ -83,93 +66,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>class</th>\n",
-       "      <th>feature1</th>\n",
-       "      <th>feature2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>4.8</td>\n",
-       "      <td>3.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>4.6</td>\n",
-       "      <td>3.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>3.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>5.2</td>\n",
-       "      <td>3.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2.3</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   class  feature1  feature2\n",
-       "0      0       4.8       3.4\n",
-       "1      0       4.6       3.2\n",
-       "2      1       6.0       3.4\n",
-       "3      0       5.2       3.4\n",
-       "4      1       5.0       2.3"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "training_df.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
    "source": [
     "\"\"\" Iteratively classify new points in test_df, based on the labeled points in training_df, and track your accuracy.\"\"\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "\"\"\" BONUS: plot the labeled points and an example of a new point being classified.\"\"\""
    ]
   },
   {
@@ -179,12 +82,14 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "\"\"\" BONUS: plot the labeled points and an example of a new point being classified.\"\"\""
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
