--- a/curriculum/week-04/2.1-evaluating-model-fit/w4d2-evaluating-model-fit-lecture.ipynb
+++ b/curriculum/week-04/2.1-evaluating-model-fit/w4d2-evaluating-model-fit-lecture.ipynb
@@ -390,10 +390,9 @@
   }
  ],
  "metadata": {
-  "anaconda-cloud": {},
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
