--- a/projects/projects-weekly/project-03/Project 4 - Web Scrapping Data Scientist Salaries-Full.ipynb
+++ b/projects/projects-weekly/project-03/Project 4 - Web Scrapping Data Scientist Salaries-Full.ipynb
@@ -2929,7 +2929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
@@ -2939,11 +2939,64 @@
     "\n",
     "def mean_salary(salary):\n",
     "    try:\n",
-    "        salary.split(' ')\n",
-    "        mean_salary = pd.to_numeric(salary)\n",
+    "        salary.split()\n",
+    "        mean_salary = float(salary)\n",
     "        return np.mean(mean_salary)\n",
     "    except:\n",
-    "        return float(salary)"
+    "        for x in salary:\n",
+    "            float(x)\n",
+    "            return "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     140000  160000\n",
+       "1     120000  150000\n",
+       "2             120000\n",
+       "3      80000  110000\n",
+       "4             180000\n",
+       "5             110000\n",
+       "6     104674  151358\n",
+       "7             105000\n",
+       "8     135000  165000\n",
+       "9     100000  150000\n",
+       "11             34142\n",
+       "12             60000\n",
+       "13    120000  150000\n",
+       "14      47860  67712\n",
+       "15     90000  135000\n",
+       "16             56000\n",
+       "17            120000\n",
+       "18      50000  60000\n",
+       "19    104349  135656\n",
+       "20     88305  114802\n",
+       "21    104349  135656\n",
+       "22             80000\n",
+       "23            150000\n",
+       "24    104349  135656\n",
+       "25    150000  205000\n",
+       "26            130000\n",
+       "27      30000  32000\n",
+       "28     88305  114802\n",
+       "29            220000\n",
+       "Name: Salary, dtype: object"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean_salary(df['Salary'])"
    ]
   },
   {
@@ -2975,31 +3028,6 @@
     "        return (np.mean(figures))\n",
     "    except:\n",
     "        return np.nan"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "cannot convert the series to <type 'float'>",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-66-7125fed5b2a6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmean_salary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Salary'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-65-2bd7b0d3a3c1>\u001b[0m in \u001b[0;36mmean_salary\u001b[0;34m(salary)\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmean_salary\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;32mexcept\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msalary\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m//anaconda/lib/python2.7/site-packages/pandas/core/series.pyc\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     76\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mconverter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     77\u001b[0m         raise TypeError(\"cannot convert the series to \"\n\u001b[0;32m---> 78\u001b[0;31m                         \"{0}\".format(str(converter)))\n\u001b[0m\u001b[1;32m     79\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     80\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: cannot convert the series to <type 'float'>"
-     ]
-    }
-   ],
-   "source": [
-    "mean_salary(df['Salary'])"
    ]
   },
   {
