--- a/curriculum/week-05/1.1-autotuning/w5d1-gridsearch-lecture.ipynb
+++ b/curriculum/week-05/1.1-autotuning/w5d1-gridsearch-lecture.ipynb
@@ -6072,9 +6072,10 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
