--- a/curriculum/week-05/4.2-postgres-lab copy/code/solution-code/w5d4-lab-more-sql-solution-code-aj.ipynb
+++ b/curriculum/week-05/4.2-postgres-lab copy/code/solution-code/w5d4-lab-more-sql-solution-code-aj.ipynb
@@ -2865,8 +2865,9 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
