--- a/curriculum/week-05/2.2-intro-to-databases/w5d2-database-fundamentals-lecture.ipynb
+++ b/curriculum/week-05/2.2-intro-to-databases/w5d2-database-fundamentals-lecture.ipynb
@@ -1106,22 +1106,12 @@
     "- [Postgres Cheat Sheet](https://gist.github.com/Kartones/dd3ff5ec5ea238d4c546)\n",
     "- [SQLite in Python](http://sebastianraschka.com/Articles/2014_sqlite_in_python_tutorial.html)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
-  "anaconda-cloud": {},
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
@@ -1136,6 +1126,10 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
    "version": "2.7.12"
+  },
+  "widgets": {
+   "state": {},
+   "version": "1.1.1"
   }
  },
  "nbformat": 4,
