--- a/curriculum/week-05/5.1-feature-selection/w5d5-feature-selection-workbook-aj.ipynb
+++ b/curriculum/week-05/5.1-feature-selection/w5d5-feature-selection-workbook-aj.ipynb
@@ -880,6 +880,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python [default]",
