--- a/curriculum/week-07/5.2-lab-dating-clusters/code/solution_code/w7d4_lab_speed_dating_solution.ipynb
+++ b/curriculum/week-07/5.2-lab-dating-clusters/code/solution_code/w7d4_lab_speed_dating_solution.ipynb
@@ -1421,9 +1421,8 @@
   }
  ],
  "metadata": {
-  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
@@ -1437,7 +1436,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
