--- a/curriculum/week-08/2.3-regex/w8d2-regex-workbook-aj.ipynb
+++ b/curriculum/week-08/2.3-regex/w8d2-regex-workbook-aj.ipynb
@@ -354,7 +354,7 @@
     "[a-f]\n",
     "[a-z]\n",
     "[A-Z]\n",
-    "[a-zA-z]\n",
+    "[a-zA-Z]\n",
     "[1-4]\n",
     "[a-c1-3]\n",
     "```"
@@ -410,7 +410,9 @@
      "slide_type": "slide"
     }
    },
-   "source": []
+   "source": [
+    "[Tt]h[^i][st]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -527,7 +529,11 @@
      "slide_type": "slide"
     }
    },
-   "source": []
+   "source": [
+    "1 [0-9]\n",
+    "2 \\d\n",
+    "3 [^\\D] or [^a-zA-Z\\s\\%\\'!-._]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -598,7 +604,9 @@
      "slide_type": "slide"
     }
    },
-   "source": []
+   "source": [
+    "b[a-z]b$, b[ao]b$"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -695,7 +703,10 @@
      "slide_type": "slide"
     }
    },
-   "source": []
+   "source": [
+    "(bob){3}\n",
+    "(bob)( )?(bob) or (bob ?){2}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -745,6 +756,16 @@
     "3. Now enter ```$2``` instead - what is the difference?\n",
     "4. Change the code to make the first one a non-capturing group \n",
     "5. Enter ```$1``` again - what has changed?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. gives first variable\n",
+    "3. gives second variable\n",
+    "5. (?:bob.?) - turn to non-capturing group\n",
+    "6. the first one becomes the second bob (skips the first one)"
    ]
   },
   {
@@ -844,7 +865,20 @@
      "slide_type": "slide"
     }
    },
-   "source": []
+   "source": [
+    "1. (bob_)\n",
+    "2. (bob)[_\\n]\n",
+    "3. (bob)[^\\s\\n]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. bob(?=_)\n",
+    "2. (bob)(?=_|\\n)\n",
+    "3. (bob)(?! |\\n)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -885,17 +919,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "metadata": {
-    "collapsed": true,
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false,
     "slideshow": {
      "slide_type": "skip"
     }
    },
    "outputs": [],
    "source": [
-    "test = \"\"\"\n",
-    "1. This is a string\n",
+    "test =\"\"\"1. This is a string\n",
     "\n",
     "2. That is also a string\n",
     "\n",
@@ -915,9 +959,78 @@
     "\n",
     "8888. this_is_a_fiiile.py\n",
     "\n",
-    "hidden bob\n",
-    "\n",
-    "\"\"\""
+    "hidden bob\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['This', 'This', 'THIS', 'thus', 'this', 'tHiS', 'THIS', 'this']"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# case insensitive\n",
+    "case_in = re.findall('th[a-z]s',test,re.M|re.I)\n",
+    "case_in"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['THIS', 'THIS']"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# case sensitive\n",
+    "case_s = re.findall('TH[A-Za-z]S',test,re.M)\n",
+    "case_s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# positive\n",
+    "pos = re.findall('TH[A-Za-z]S',test,re.M)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# negative\n"
    ]
   },
   {
