--- a/curriculum/week-08/2.3-regex/w8d2-regex-workbook.ipynb
+++ b/curriculum/week-08/2.3-regex/w8d2-regex-workbook.ipynb
@@ -354,7 +354,7 @@
     "[a-f]\n",
     "[a-z]\n",
     "[A-Z]\n",
-    "[a-zA-Z]\n",
+    "[a-zA-z]\n",
     "[1-4]\n",
     "[a-c1-3]\n",
     "```"
@@ -410,9 +410,7 @@
      "slide_type": "slide"
     }
    },
-   "source": [
-    "[Tt]h[^i][st]"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -529,11 +527,7 @@
      "slide_type": "slide"
     }
    },
-   "source": [
-    "1 [0-9]\n",
-    "2 \\d\n",
-    "3 [^\\D] or [^a-zA-Z\\s\\%\\'!-._]"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -604,9 +598,7 @@
      "slide_type": "slide"
     }
    },
-   "source": [
-    "b[a-z]b$, b[ao]b$"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -703,10 +695,7 @@
      "slide_type": "slide"
     }
    },
-   "source": [
-    "(bob){3}\n",
-    "(bob)( )?(bob) or (bob ?){2}"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -756,16 +745,6 @@
     "3. Now enter ```$2``` instead - what is the difference?\n",
     "4. Change the code to make the first one a non-capturing group \n",
     "5. Enter ```$1``` again - what has changed?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "2. gives first variable\n",
-    "3. gives second variable\n",
-    "5. (?:bob.?) - turn to non-capturing group\n",
-    "6. the first one becomes the second bob (skips the first one)"
    ]
   },
   {
@@ -865,20 +844,7 @@
      "slide_type": "slide"
     }
    },
-   "source": [
-    "1. (bob_)\n",
-    "2. (bob)[_\\n]\n",
-    "3. (bob)[^\\s\\n]\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1. bob(?=_)\n",
-    "2. (bob)(?=_|\\n)\n",
-    "3. (bob)(?! |\\n)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -919,27 +885,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import re"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "slideshow": {
      "slide_type": "skip"
     }
    },
    "outputs": [],
    "source": [
-    "test =\"\"\"1. This is a string\n",
+    "test = \"\"\"\n",
+    "1. This is a string\n",
     "\n",
     "2. That is also a string\n",
     "\n",
@@ -959,78 +915,9 @@
     "\n",
     "8888. this_is_a_fiiile.py\n",
     "\n",
-    "hidden bob\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['This', 'This', 'THIS', 'thus', 'this', 'tHiS', 'THIS', 'this']"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# case insensitive\n",
-    "case_in = re.findall('th[a-z]s',test,re.M|re.I)\n",
-    "case_in"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['THIS', 'THIS']"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# case sensitive\n",
-    "case_s = re.findall('TH[A-Za-z]S',test,re.M)\n",
-    "case_s"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# find 4 letter words\n",
-    "pos = re.findall('\\w{4}',test,re.M)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# negative\n"
+    "hidden bob\n",
+    "\n",
+    "\"\"\""
    ]
   },
   {
