--- a/curriculum/week-02/3.1-pandas-intro-3/w2d3-pivot-tables-workbook.ipynb
+++ b/curriculum/week-02/3.1-pandas-intro-3/w2d3-pivot-tables-workbook.ipynb
@@ -1998,9 +1998,10 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
