--- a/projects/projects-weekly/project-04/Project 4 - Web Scrapping Data Scientist Salaries-Full-aj.ipynb
+++ b/projects/projects-weekly/project-04/Project 4 - Web Scrapping Data Scientist Salaries-Full-aj.ipynb
@@ -2125,7 +2125,7 @@
    },
    "outputs": [],
    "source": [
-    "#Get each list from each page and \n",
+    "#Get each list from each page and city\n",
     "\n",
     "Location = []\n",
     "Job_Title = []\n",
